--- a/submission/submission.html
+++ b/submission/submission.html
@@ -50,9 +50,9 @@
                   <!-- STUDENT INPUT ENTRY -->
                   <!--******************************************************************************************************************
                   PLEASE CHANGE THE HREF URL FOR YOUR SPECIFIC 3D App and GITHUB URLs TO ACCESS YOUR 3D App, Codebase and VRML/X3D MODELS-->
-                  <a class="dropdown-item" href="https://users.sussex.ac.uk/~sk902/3dapp/assignment/index.php/index">3D App</a>
-                  <a class="dropdown-item" href="https://github.com/martinwh/3D_Apps_2020/tree/master/lab9/CocaCola_VM">GitHub Codebase</a>
-                  <a class="dropdown-item" href="https://github.com/martinwh/3D_Apps_2020/tree/master/lab9/CocaCola_VM/application/assets/x3d#">GitHub 3D Models</a>
+                  <a class="dropdown-item" href="https://users.sussex.ac.uk/~sk902/3dapp/assignment/index.php/apicocacola">3D App</a>
+                  <a class="dropdown-item" href="https://github.com/KamshettySumanth/3dapp/tree/main/assignment">GitHub Codebase</a>
+                  <a class="dropdown-item" href="https://github.com/KamshettySumanth/3dapp/tree/main/assignment/application/assets/x3d">GitHub 3D Models</a>
                   <!--*******************************************************************************************************************-->
                   <a class="dropdown-item" href="submission.html">Deeper Understanding</a>
                   <a class="dropdown-item" href="submission.html">Last Submission File</a>
@@ -71,7 +71,7 @@
             <div class="card-body">
               <!-- Substitute your 3D App link for mine -->
               <h5 class="card-title">You must link your 3D App URL to the My 3D App button below</h5>
-              <p class="card-text"><b></b> My URL is this: <b>https://users.sussex.ac.uk/~sk902/3dapp/assignment/index.php/apicocacola</b>, where '3dapp' is the folder in the root of my public_html directory, 'assignment' is the folder where my 3D App is published and 'apicocacola' is my MVC view for your 3D App.</p>
+              <p class="card-text"><b></b> My URL is this: <b>https://users.sussex.ac.uk/~sk902/3dapp/assignment/index.php/apicocacola</b>, where '3dapp' is the folder in the root of my public_html directory, 'index' is the folder where my 3D App is published and 'apicocacola' is my MVC view for your 3D App.</p>
               <!-- STUDENT INPUT ENTRY -->
               <!--******************************************************************************************************************
               PLEASE CHANGE THE HREF URL FOR YOUR SPECIFIC 3D App URL TO ACCESS YOUR 3D App-->
@@ -84,11 +84,11 @@
             <h4 class="card-header">My 3D App GitHub Codebase</h4>
             <div class="card-body">
               <h5 class="card-title">You must link your 3D App GitHub Codebase URL to the button below</h5>
-              <p class="card-text">You will have a GitHub Codebase URL similar to this: <b>https://github.com/username/3dapp/assignment</b>, which should reflect the path to your assignment code in your GitHub folder</p>             
+              <p class="card-text">You will have a GitHub Codebase URL similar to this: <b>https://github.com/KamshettySumanth/3dapp/tree/main/assignment</b>, which should reflect the path to your assignment code in your GitHub folder</p>             
               <!-- STUDENT INPUT ENTRY -->
               <!--******************************************************************************************************************
               PLEASE CHANGE THE HREF URL FOR YOUR SPECIFIC GITHUB URL TO ACCESS YOUR 3D App CODEBASE-->
-              <a href="https://github.com/martinwh/3D_Apps_2020/tree/master/lab9/CocaCola_VM" class="btn btn-primary">My 3D App Codebase</a>
+              <a href="https://github.com/KamshettySumanth/3dapp/tree/main/assignment" class="btn btn-primary">My 3D App Codebase</a>
               <!--*******************************************************************************************************************-->
             </div>
           </div>
@@ -98,11 +98,11 @@
             <h4 class="card-header">My 3D App GitHub 3D Models</h4>
             <div class="card-body">
               <h5 class="card-title">You must link your 3D App GitHub X3D Models URL to the button below</h5>
-              <p class="card-text">You will have a GitHub X3D Model URL similar to this: <b>https://github.com/username/3dapp/assignment/application/assests/x3d</b>, which should reflect the path to your assignment X3D Models in your GitHub folder</p>
+              <p class="card-text">You will have a GitHub X3D Model URL similar to this: <b>https://github.com/KamshettySumanth/3dapp/tree/main/assignment/application/assets/x3d</b>, which should reflect the path to your assignment X3D Models in your GitHub folder</p>
               <!-- STUDENT INPUT ENTRY -->
               <!--**************************************************************************************
               PLEASE CHANGE THE HREF URL FOR YOUR SPECIFIC GITHUB URL TO ACCESS YOUR 3X3D or VRML 3D MODELS-->
-              <a href="https://github.com/martinwh/3D_Apps_2020/tree/master/lab9/CocaCola_VM/application/assets/x3d" class="btn btn-primary">My VRML/X3D Models</a>
+              <a href="https://github.com/KamshettySumanth/3dapp/tree/main/assignment/application/assets/x3d" class="btn btn-primary">My VRML/X3D Models</a>
               <!--***************************************************************************************-->
             </div>
           </div>
@@ -118,11 +118,10 @@
                 <!--**************************************************************************************
                   PLEASE EDIT THE PARAGRAPH TAGS BELOW TO INPUT YOUR CLAIMED DEEPER UNDERSTANDING MARKS
                 ******************************************************************************************-->
-                <li><p class="card-text">I have explored other 3D Content authoring packages besides 3ds Max to create my 3D models, i.e. C4D and Blender</p></li>
-                <li><p class="card-text">I have created an alternative export workflow for my 3D Models using C4D => VRML => X3D => X3DOM</p></li>
-                <li><p class="card-text">...</p></li>
-                <li><p class="card-text">...</p></li>
-                <li><p class="card-text">...</p></li>
+                <li><p class="card-text">I explored some of the PHP libraries like PDO to connect to sqlite db and get data</p></li>
+                <li><p class="card-text">I used bootstrap as my main css framework to make my application look good.</p></li>
+                <li><p class="card-text">I used AJAX requests to get the data from JSON, which got it from database.</p></li>
+                <li><p class="card-text">Explored how to change texture of coke can on clicking a button.</p></li>
                 <!--***************************************************************************************-->
 
               </ul>
@@ -145,7 +144,6 @@
                 <li><p class="card-text"><b>Time Uploaded</b>: ...</p></li>
                 <!--***************************************************************************************-->
               </ul>
-              <a href="https://canvas.sussex.ac.uk/courses/23366/pages/instructions-for-finding-last-file-uploaded" class="btn btn-primary">Instructions for finding Last FIle Uploaded</a>
             </div>
           </div>           
         </div>
